[project @ zyp-20060516232127-1ed2efc46068ab87] [project @ 33] Added optionparser.

--- a/pyanidb.conf
+++ b/pyanidb.conf
@@ -1,5 +1,7 @@
 # Put this under ~/.pyanidb.conf and chmod 600 to prevent other users from reading your password.
 
-[auth]
+[pyanidb]
 username = foo
 password = password
+
+suffix = avi ogm mkv
