[project @ zyp-20061117200812-d609f675e158ba15] [project @ 66] Implemented hashing with additional checksums.

--- a/pyanidb.conf
+++ b/pyanidb.conf
@@ -4,5 +4,8 @@
 username = foo
 password = password
 
-suffix = avi ogm mkv
+suffix = avi ogm mkv mp4
 format = _[%group]_%anime_-_%epno%ver_[%CRC].%suf
+
+# Uncomment this to disable caching.
+#cache = 0
